# OpenCVTutorials

./: .gitignore  CMakeLists.txt  CMakePresets.json
BuildTest/: BuildTest.cpp  CMakeLists.txt
